--- a/app.yml
+++ b/app.yml
@@ -1,8 +1,8 @@
 ---
 
-  - name: Running play for CIRRAS APPLICATION configuration
-    hosts: cirras_app
-    remote_user: ec2-user
+  - name: Running app.yml playbook
+    # hosts: cirras_app
+    # remote_user: ec2-user
     #debugger: on_failed
     become: yes
     become_method: sudo
