--- a/client.yml
+++ b/client.yml
@@ -1,8 +1,8 @@
 ---
 
-  - name: Running play for CIRRAS PROXY configuration
-    hosts: cirras_proxy
-    remote_user: ec2-user
+  - name: Running client.yml playbook
+    #hosts: cirras_proxy
+    #remote_user: ec2-user
     #debugger: on_failed
     become: yes
     become_method: sudo
