Added nixadm to app group_vars

--- a/group_vars/app.yml
+++ b/group_vars/app.yml
@@ -1,6 +1,9 @@
 ---
 
   grps:
-    - groupname: appadms
+    - groupname: appadm
+      gid: ''
+      system_group: no
+    - groupname: nixadm
       gid: ''
       system_group: no
